feat: Introduce navigation and reporting features
Adds a sidebar for page navigation and a dedicated Reports page. The Reports page displays asset breakdowns by status and category, along with upcoming maintenance schedules. Settings page also added for data management.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
         theme: {
           extend: {
             colors: {
-              'primary': '#6366F1', // Indigo
-              'primary-focus': '#4F46E5',
-              'background': '#F9FAFB', // Light Gray
+              'primary': '#4F46E5', // Indigo-600
+              'primary-focus': '#4338CA', // Indigo-700
+              'primary-content': '#FFFFFF',
+              'sidebar': '#1F2937', // Gray-800
+              'sidebar-focus': '#374151', // Gray-700
+              'sidebar-text': '#D1D5DB', // Gray-300
+              'background': '#F3F4F6', // Gray-100
               'surface': '#FFFFFF',   // White
-              'text-main': '#1F2937',   // Dark Gray
-              'text-secondary': '#6B7280', // Medium Gray
-              'border': '#E5E7EB',       // Lighter Gray Border
+              'text-main': '#111827',   // Gray-900
+              'text-secondary': '#6B7280', // Gray-500
+              'border': '#E5E7EB',       // Gray-200
               'status-instock': '#D1FAE5',
               'status-instock-text': '#065F46',
               'status-assigned': '#FEE2E2',
